sample-app/config/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: production
  labels:
    app: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
